--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -1,5 +1,4 @@
 import { Card, Cards } from "nextra-theme-docs";
-import { Folder } from "lucide-react";
 import { Callout } from "nextra-theme-docs";
 
 ## Welcome to Electronic
@@ -18,8 +17,8 @@ Hello, if you learned electronics basics and forget a lot of thing you only need
   <Card title="Switches" href="/electronics/switches" />
   <Card title="Relay" href="/electronics/relay" />
   <Card title="Fuses" href="/electronics/fuses" />
-  <Card icon={<Folder />} title="Diode" href="/electronics/diode" />
-  <Card icon={<Folder />} title="Transistor" href="/electronics/transistor" />
+  <Card icon={<svg data-v-56bd7dfc="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-folder"><path d="M4 20h16a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.93a2 2 0 0 1-1.66-.9l-.82-1.2A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13c0 1.1.9 2 2 2Z"></path></svg>} title="Diode" href="/electronics/diode" />
+  <Card icon={<svg data-v-56bd7dfc="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-folder"><path d="M4 20h16a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.93a2 2 0 0 1-1.66-.9l-.82-1.2A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13c0 1.1.9 2 2 2Z"></path></svg>} title="Transistor" href="/electronics/transistor" />
   <Card title="Thyristor" href="/electronics/thyristor" />
   <Card title="Diac" href="/electronics/diac" />
   <Card title="Triac" href="/electronics/triac" />
