--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -1,5 +1,7 @@
 import Image from "@/components/Image";
 
+<Image src="/DIAC-Symbol.webp" caption="Resistor Symbols" />
+
 # Diac
 **Contents:**\
 [1. What is a Diac?](#what-is-a-resistor)\
@@ -7,11 +9,6 @@ import Image from "@/components/Image";
 
 ## What is a Diac?
 
-A diac is like Diode but it current passes in the two sides. \
-Are you asking yourself what is its difference from the regular wire?
+It is an electronic component that is very similar to a diode, but there are two differences:
 
 <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}></span>
-
-## Diac Symbol
-
-<Image src="/DIAC-Symbol.webp" caption="Resistor Symbols" />
