--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -1,14 +1,21 @@
 import Image from "@/components/Image";
 
-<Image src="/DIAC-Symbol.webp" caption="Resistor Symbols" />
-
 # Diac
 **Contents:**\
 [1. What is a Diac?](#what-is-a-resistor)\
 [2. Diac Symbol](#resistor-symbol)
 
+<Image src="/Diac-Cover.png" caption="Resistor Symbols" />
+
 ## What is a Diac?
 
 It is an electronic component that is very similar to a diode, but there are two differences:
+1. A Diac can conduct current in both directions.
+2. a Diac has no anode, cathode but A1, A2.
 
 <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}></span>
+
+# Diac Symbol
+
+<Image src="/DIAC-Symbol.webp" caption="Resistor Symbols" />
+Diac-Cover.png
