--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -5,7 +5,7 @@ import Image from "@/components/Image";
 [1. What is a Diac?](#what-is-a-resistor)\
 [2. Diac Symbol](#resistor-symbol)
 
-<Image src="/Diac-Cover.png" caption="Resistor Symbols" />
+<Image src="/Diac-Cover.png" caption="Diac Image" />
 
 ## What is a Diac?
 
@@ -17,5 +17,4 @@ It is an electronic component that is very similar to a diode, but there are two
 
 # Diac Symbol
 
-<Image src="/DIAC-Symbol.webp" caption="Resistor Symbols" />
-Diac-Cover.png
+<Image src="/DIAC-Symbol.webp" caption="Diac Symbols" />
