--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -15,6 +15,6 @@ It is an electronic component that is very similar to a diode, but there are two
 
 <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}></span>
 
-# Diac Symbol
+## Diac Symbol
 
-<Image src="/DIAC-Symbol.webp" caption="Diac Symbols" />
+<Image src="/DIAC-Symbol.webp" />
