--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -13,7 +13,7 @@ It is an electronic component that is very similar to a diode, but there are two
 1. A Diac can conduct current in both directions.
 2. a Diac has no anode, cathode but A1, A2.
 
-<span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}></span>
+But the diak needs a voltage <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>greater than the diode voltage (0.7)</span> to move to the ON state
 
 ## Diac Symbol
 
