--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -15,6 +15,8 @@ It is an electronic component that is very similar to a diode, but there are two
 
 But the diak needs a voltage <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>greater than the diode voltage (0.7)</span> to move to the ON state
 
+<Image src="/diac-voltage-current-characteristic-graph.svg" caption="DIAC voltage- current characteristic" />
+
 ## Diac Symbol
 
-<Image src="/DIAC-Symbol.webp" />
+<Image src="/diac-circuit-symbol.svg" />
