--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -10,13 +10,15 @@ import Image from "@/components/Image";
 ## What is a Diac?
 
 It is an electronic component that is very similar to a diode, but there are two differences:
-1. A Diac can conduct current in both directions.
-2. a Diac has no anode, cathode but A1, A2.
-
-But the diak needs a voltage <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>greater than the diode voltage (0.7)</span> to move to the ON state
+1. A DIAC can conduct current in <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>both directions</span>.
+2. The DIAC needs a voltage <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>greater than the diode voltage (0.7)</span> to move to the ON state
 
 <Image src="/diac-voltage-current-characteristic-graph.svg" caption="DIAC voltage- current characteristic" />
 
 ## Diac Symbol
 
-<Image src="/diac-circuit-symbol.svg" />
+The DIAC symbol used to depict this electronic component in circuit diagrams can be remembered as a combination of what may appear to be two diodes in parallel with each other but connected in opposite directions.
+
+<Image src="/diac-circuit-symbol.svg" caption="DIAC circuit symbol" />
+
+The Diac has no anode, cathode but A1, A2 (Anode 1, Anode 2) or MT1, MT2.
