--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -1,6 +1,6 @@
 import Image from "@/components/Image";
 
-<Image src="/Diac-Cover.png" caption="Diac Image" />
+<Image src="/Diac-Cover.png" />
 
 # Diac
 **Contents:**\
