--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -1,13 +1,11 @@
 import { Card, Cards } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 
-## Welcome to Electronic
+## Welcome to Electronics Components
 
 Hello, if you learned electronics basics and forget a lot of thing you only need to check out this website
 
-<Callout> I don't know what to write here but the Callout design is very cool so i wanted to try it in introduction page to everybody see it</Callout>
-
-## Links
+## Pages
 
 <Cards>
   <Card title="Resistor" href="/electronics/resistor" />
