--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -3,9 +3,11 @@ import { Callout } from "nextra-theme-docs";
 
 ## Welcome to Electronics Components
 
-Hello, if you learned electronics basics and forget a lot of thing you only need to check out this website
+If you're looking to refresh your knowledge of electronics basics, you've come to the right place! This website covers a wide range of electronics components to help you get back on track.
 
 ## Pages
+
+Check out the following electronics components:
 
 <Cards>
   <Card title="Resistor" href="/electronics/resistor" />
