--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -5,7 +5,7 @@ import Image from "@/components/Image";
 # Diac
 **Contents:**\
 [1. What is a Diac?](#what-is-a-resistor)\
-[2. How does Diac work?](#how-does-diac-work)
+[2. How does Diac work?](#how-does-diac-work)\
 [2. Diac Symbol](#resistor-symbol)
 
 ## What is a Diac?
