--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -1,8 +1,20 @@
 import Image from "@/components/Image";
 
-## What is Thyristor?
+## What is a Thyristor?
 
-Silicon Controlled Rectifier (SCR) or Thyristor as it known
+A thyristor, also known as a Silicon Controlled Rectifier (SCR), is a semiconductor device.
+
+The diode allows current to flow from the Anode to the Cathode if the Anode voltage is greater than the Cathode voltage by approximately 0.7 volts. However, this behavior is different in the thyristor.
+
+In the thyristor, current will only pass if a single pulse is applied to the Gate. Once triggered, the thyristor will conduct like a wire.
+
+## Understanding How the Thyristor Works
+
+1. The thyristor can be controlled through the Gate.
+2. Applying a positive pulse to the Gate will put the thyristor in an ON state.
+3. When the thyristor is in an ON state, it operates like a diode.
+4. If the pulse is removed from the Gate, the thyristor remains in an active state.
+5. The thyristor switches to an OFF state when the voltage on the Anode becomes negative, or when the power source is completely removed, or by shorting the Cathode and Anode using a small resistor or switch.
 
 ## Thyristor Symbol
 
