--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -15,7 +15,10 @@ In the thyristor, current will only pass if a single pulse is applied to the Gat
 3. When the thyristor is in an ON state, it operates like a diode.
 4. If the pulse is removed from the Gate, the thyristor remains in an active state.
 5. The thyristor switches to an OFF state when the voltage on the Anode becomes negative, or when the power source is completely removed, or by shorting the Cathode and Anode using a small resistor or switch.
+6. The thyristor will also turn OFF if a weak current flows through it, known as the minimum holding current (Ih).
 
 ## Thyristor Symbol
 
 <Image src="/thyristor-symbol.gif" caption="Thyristor Symbol" />
+
+The image above depicts the symbol used to represent a thyristor in circuit diagrams. It consists of three terminals: Anode, Cathode, and Gate. The Anode and Cathode terminals represent the main current-carrying paths, while the Gate terminal is used to control the thyristor's operation. This symbol simplifies the representation of the thyristor's complex internal structure and facilitates its integration into various electronic circuits.
