--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -22,3 +22,17 @@ In the thyristor, current will only pass if a single pulse is applied to the Gat
 <Image src="/thyristor-symbol.gif" caption="Thyristor Symbol" />
 
 The image above depicts the symbol used to represent a thyristor in circuit diagrams. It consists of three terminals: Anode, Cathode, and Gate. The Anode and Cathode terminals represent the main current-carrying paths, while the Gate terminal is used to control the thyristor's operation. This symbol simplifies the representation of the thyristor's complex internal structure and facilitates its integration into various electronic circuits.
+
+## Thyristor Advantages as Current Breakers
+
+The thyristor, used as a current breaker, offers distinct benefits:
+
+- High tolerance to vibrations and noise, unlike mechanical breakers.
+- Produces no electric spark or noise during switching, ensuring quiet operation.
+- Extremely fast switching speeds, sometimes reaching nanoseconds in frequency converters.
+- Handles high voltages and currents, up to 2000 amperes, despite its compact size.
+- Easy controllability through Gate pulses, allowing for precise operation.
+
+These advantages make thyristors an ideal choice for efficient and reliable current breaking applications.
+
+<Image src="/thyristors-types.jpeg" caption="Thyristors Types" />
