--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -36,3 +36,23 @@ The thyristor, used as a current breaker, offers distinct benefits:
 These advantages make thyristors an ideal choice for efficient and reliable current breaking applications.
 
 <Image src="/thyristors-types.jpeg" caption="Thyristors Types" />
+
+
+
+## Thyristor Types: SCR and GTO
+
+In the world of thyristors, two prominent types are widely used: the Gate-turn-off thyristor (GTO) and the Silicon Controlled Rectifier (SCR).
+
+### GTO (Gate-turn-off thyristor):
+
+<Image src="/GTO-symbols.jpg" caption="Gate-turn-off thyristor Symbols" />
+
+The GTO thyristor possesses a unique feature that sets it apart from other thyristors. It can be switched to the OFF state by applying a negative gate pulse. This characteristic enables precise control over its conduction state, allowing for rapid switching operations.
+
+### SCR (Silicon Controlled Rectifier):
+
+<Image src="/SCR-symbol.jpeg" caption="SCR Symbol" />
+
+On the other hand, the SCR thyristor lacks the ability to be turned OFF through the Gate. Once triggered, it remains in the ON state until the current flowing through it drops below a certain threshold. As a result, SCR thyristors are commonly used for applications requiring uninterrupted conduction.
+
+Both GTO and SCR thyristors play essential roles in various electronic and power control systems, each tailored to specific needs and applications.
