--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -37,19 +37,21 @@ These advantages make thyristors an ideal choice for efficient and reliable curr
 
 <Image src="/thyristors-types.jpeg" caption="Thyristors Types" />
 
-
-
 ## Thyristor Types: SCR and GTO
 
 In the world of thyristors, two prominent types are widely used: the Gate-turn-off thyristor (GTO) and the Silicon Controlled Rectifier (SCR).
 
 ### GTO (Gate-turn-off thyristor):
 
+- It can be switched to the OFF state with a negative gate pulse
+
 <Image src="/GTO-symbols.jpg" caption="Gate-turn-off thyristor Symbols" />
 
 The GTO thyristor possesses a unique feature that sets it apart from other thyristors. It can be switched to the OFF state by applying a negative gate pulse. This characteristic enables precise control over its conduction state, allowing for rapid switching operations.
 
 ### SCR (Silicon Controlled Rectifier):
+
+- It cannot be moved to the OFF state on Gate
 
 <Image src="/SCR-symbol.jpeg" caption="SCR Symbol" />
 
