--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -45,7 +45,7 @@ In the world of thyristors, two prominent types are widely used: the Gate-turn-o
 
 - It can be switched to the OFF state with a negative gate pulse
 
-<Image src="/GTO-symbols.jpg" caption="Gate-turn-off thyristor Symbols" />
+<Image src="/GTO-Symbols.jpg" caption="GTO Symbols" />
 
 The GTO thyristor possesses a unique feature that sets it apart from other thyristors. It can be switched to the OFF state by applying a negative gate pulse. This characteristic enables precise control over its conduction state, allowing for rapid switching operations.
 
