Update and rename traic.mdx to triac.mdx

--- a/pages/electronics/triac.mdx
+++ b/pages/electronics/triac.mdx
@@ -1,6 +1,6 @@
 import Image from "@/components/Image";
 
-## What is a Traic?
+## What is a Triac?
 
 - A Triac is an electronic component that closely resembles a thyristor but has the ability to conduct current in both directions.
 - It has three terminals: Gate, MT1, and MT2.
