--- a/pages/electronics/triac.mdx
+++ b/pages/electronics/triac.mdx
@@ -6,5 +6,6 @@ import Image from "@/components/Image";
 - It has three terminals: Gate, MT1, and MT2.
 - The Triac can be triggered into conduction by applying either a positive or negative pulse to the Gate terminal.
 
+## Triac Symbol
 
-<Image src="/" caption="Nothing" />
+<Image src="/TRIAC-Symbol.png" caption="Triac Symbol" />
