--- a/pages/electronics/triac.mdx
+++ b/pages/electronics/triac.mdx
@@ -6,6 +6,14 @@ import Image from "@/components/Image";
 - It has three terminals: Gate, MT1, and MT2.
 - The Triac can be triggered into conduction by applying either a positive or negative pulse to the Gate terminal.
 
+## How does a Triac Work?
+
+The Triac switches to an OFF state under the following conditions:
+
+1. When the voltage across the Triac becomes reverse-biased, meaning the positive voltage becomes negative and vice versa.
+2. When the power supply is completely removed.
+3. By shorting the two terminals of the Triac using a small resistor or a switch.
+
 ## Triac Symbol
 
 <Image src="/TRIAC-Symbol.png" caption="Triac Symbol" />
