--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -5,7 +5,7 @@ import { Callout } from "nextra-theme-docs";
 
 If you're looking to refresh your knowledge of electronics basics, you've come to the right place! This website covers a wide range of electronics components to help you get back on track.
 
-## Pages
+## Components:
 
 Check out the following electronics components:
 
