--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -1,6 +1,5 @@
-import { Cards } from "nextra-theme-docs";
+import { Card, Cards } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import Card from "@/components/Card";
 
 ## Welcome to Electronics Components
 
@@ -11,16 +10,16 @@ If you're looking to refresh your knowledge of electronics basics, you've come t
 Check out the following electronics components:
 
 <Cards>
-  <Card title="Resistor" href="/electronics/resistor" active={true} />
-  <Card title="Capacitor" href="/electronics/capacitor" active={true} />
-  <Card title="Inductor" href="/electronics/inductor" active={true} />
+  <Card title="Resistor" href="/electronics/resistor" />
+  <Card title="Capacitor" href="/electronics/capacitor" />
+  <Card title="Inductor" href="/electronics/inductor" />
   <Card title="Transformer" href="/electronics/transformer" />
   <Card title="Switches" href="/electronics/switches" />
   <Card title="Relay" href="/electronics/relay" />
   <Card title="Fuses" href="/electronics/fuses" />
   <Card title="Diode (Folder)" href="/electronics/diode" />
   <Card title="Transistor (Folder)" href="/electronics/transistor" />
-  <Card title="Thyristor" href="/electronics/thyristor" active={true} />
-  <Card title="Diac" href="/electronics/diac" active={true} />
-  <Card title="Triac" href="/electronics/triac" active={true} />
+  <Card title="Thyristor" href="/electronics/thyristor" />
+  <Card title="Diac" href="/electronics/diac" />
+  <Card title="Triac" href="/electronics/triac" />
 </Cards>
