--- a/pages/electronics/fuses.mdx
+++ b/pages/electronics/fuses.mdx
@@ -10,7 +10,7 @@ Fuses are designed with a thin strip of conductive material, usually made of cop
 
 ## Fuse Symbol
 
-<Image src="/FuseSymbol.png" alt="Fuse Symbol" />
+<Image src="/FuseSymbol.png" caption="Fuse Symbol" />
 
 ## Types of Fuse
 
