--- a/pages/electronics/switches.mdx
+++ b/pages/electronics/switches.mdx
@@ -1,3 +1,6 @@
+import Image from "@/components/Image";
+
+
 ## Switches: Introduction and Types
 
 Switches are fundamental electronic components used to control the flow of current in a circuit by opening or closing the electrical pathway. They serve as the basic building blocks for various electronic and electrical systems, enabling manual or automatic control over devices.
@@ -18,6 +21,7 @@ Switches are fundamental electronic components used to control the flow of curre
 
 7. **Proximity Sensor:** An electronic switch that detects the presence or absence of an object without physical contact.
 
-8. **Toggle Switch:** A simple mechanical switch with a lever or toggle that can be moved between ON and OFF positions.
+<Image src="/switchesTypes.png" caption="Types of Switches." />
+
 
 Switches are vital components in countless applications, from household electronics to industrial control systems, offering versatility and control in electrical circuits.
