--- a/pages/electronics/voltage-regulator.mdx
+++ b/pages/electronics/voltage-regulator.mdx
@@ -1,8 +1,28 @@
+import Image from "@/components/Image";
+
 # Voltage Regulator Component
 
 - They are electronic elements that output a constant voltage regardless of the input.
 - The input voltage must be greater than the output voltage
 - They are widely used in designing power supply circuits and voltage sources (Power Supply).
 
-## How its work? (+Symbol)
+## Symbol....
 
+<Image src="/voltage-regulator-symbol.png" caption="Voltage Regulator Symbol" />
+
+Voltage Regulator has 3 legs, one for ground, and input + output.
+
+## types.
+
+Voltage Regulator a lot of times be like this: 78?? this is the types table with the min input voltage and output voltage
+
+| **Type** | **Min Input Voltage** | **Output Voltage** |
+|:--------:|:---------------------:|:------------------:|
+|   7805   |           7V          |         +5V        |
+|   7806   |           8V          |         +6V        |
+|   7808   |          10V          |        +10V        |
+|   7809   |          11V          |        +11V        |
+|   7812   |          15V          |        +15V        |
+|   7815   |          18V          |        +18V        |
+|   7818   |          22V          |        +22V        |
+|   7824   |          30V          |        +30V        |
