--- a/pages/electronics/voltage-regulator.mdx
+++ b/pages/electronics/voltage-regulator.mdx
@@ -28,3 +28,7 @@ Voltage regulators are commonly identified by part numbers like 7805, 7806, etc.
 |   7824   |          30V          |        +30V        |
 
 Voltage regulators are essential components in various electronic devices, providing stable and reliable voltage regulation for optimal performance.
+
+## Main Circuit
+
+<Image src="/voltage-regulator-circuit.png" caption="Voltage Regulator Main Circuit" />
