--- a/pages/electronics/voltage-regulator.mdx
+++ b/pages/electronics/voltage-regulator.mdx
@@ -27,8 +27,8 @@ Voltage regulators are commonly identified by part numbers like 7805, 7806, etc.
 |   7818   |          22V          |        +22V        |
 |   7824   |          30V          |        +30V        |
 
-Voltage regulators are essential components in various electronic devices, providing stable and reliable voltage regulation for optimal performance.
-
 ## Main Circuit
 
 <Image src="/voltage-regulator-circuit.png" caption="Voltage Regulator Main Circuit" />
+
+In this circuit, the input voltage to the voltage regulator is 12+ Volts, and the output will be 9+ Volts. The capacitors are used to remove any noise from the circuit, and it is recommended to use 100nF capacitors for this purpose.
