--- a/pages/electronics/voltage-regulator.mdx
+++ b/pages/electronics/voltage-regulator.mdx
@@ -1,5 +1,6 @@
 import Image from "@/components/Image";
-
+import { Callout } from 'nextra/components'
+ 
 # Voltage Regulator Component
 
 - They are electronic elements that output a constant voltage regardless of the input.
@@ -12,7 +13,7 @@ import Image from "@/components/Image";
 
 Voltage regulators typically have three legs, one for ground and separate inputs and outputs.
 
-## Types
+## Types of Voltage Regulators
 
 Voltage regulators are commonly identified by part numbers like 7805, 7806, etc., indicating their input and output voltage specifications.
 
@@ -26,6 +27,16 @@ Voltage regulators are commonly identified by part numbers like 7805, 7806, etc.
 |   7815   |          18V          |        +18V        |
 |   7818   |          22V          |        +22V        |
 |   7824   |          30V          |        +30V        |
+
+### Can I get voltage in minus?
+
+Yes, other types of voltage regulators provide negative output voltages. These regulators have part numbers like 7905, 7906, etc.
+
+<Callout type="warning" emoji="⚠️">
+  However, it's essential to note that the pin configuration for these negative voltage regulators may be different from the standard ones mentioned earlier. 
+</Callout>
+
+Please refer to the datasheet or product documentation for the correct pin arrangement when using negative voltage regulators.
 
 ## Main Circuit
 
