--- a/pages/electronics/voltage-regulator.mdx
+++ b/pages/electronics/voltage-regulator.mdx
@@ -43,3 +43,14 @@ Please refer to the datasheet or product documentation for the correct pin arran
 <Image src="/voltage-regulator-circuit.png" caption="Voltage Regulator Main Circuit" />
 
 In this circuit, the input voltage to the voltage regulator is 12+ Volts, and the output will be 9+ Volts. The capacitors are used to remove any noise from the circuit, and it is recommended to use 100nF capacitors for this purpose.
+
+## What do I need from the Datasheet?
+
+To select the appropriate voltage regulator for your application, you will need the following information from the datasheet:
+
+- Input Voltage Range
+- Output Voltage
+- Output Current Capacity
+- Dropout Voltage (The minimum voltage difference between the input and output required for the regulator to function properly)
+
+
