--- a/pages/electronics/fuses.mdx
+++ b/pages/electronics/fuses.mdx
@@ -1,4 +1,9 @@
 import Image from "@/components/Image";
+import { Callout } from 'nextra/components'
+
+<Callout type="info" emoji="🤖">
+  This article was generated with the help of Chat GPT!
+</Callout>
 
 # Fuse: Introduction and Purpose
 
