--- a/pages/electronics/switches.mdx
+++ b/pages/electronics/switches.mdx
@@ -1,5 +1,9 @@
 import Image from "@/components/Image";
+import {Callout} from "nextra/components";
 
+<Callout type="info" emoji="🤖">
+  This article was generated with the help of Chat GPT!
+</Callout>
 
 ## Switches: Introduction and Types
 
