--- a/pages/electronics/resistor.mdx
+++ b/pages/electronics/resistor.mdx
@@ -1,14 +1,7 @@
 import { TabTtab, FileTree } from "nextra-theme-docs";
 import Image from "@/components/Image";
 
-# Resistors
-**Contents:**\
-[1. What is a resistor?](#what-is-a-resistor)\
-[2. Resistor Symbol](#resistor-symbol)\
-[3. Types of resistors](#types-of-resistors)
-
-
-## What is a resistor?
+# What is a resistor?
 
 A resistor is an electrical component that limits or regulates the flow of electrical current in an electronic circuit. Resistors can also be used to provide a specific voltage for an active device such as a transistor.
 
