--- a/pages/electronics/inductor.mdx
+++ b/pages/electronics/inductor.mdx
@@ -1,13 +1,6 @@
 import Image from "@/components/Image";
 
-# Inductor
-**Contents:**\
-[1. What is a Inductor?](#what-is-a-inductor)\
-[2. Inductor Symbol](#inductor-symbol)\
-[3. How does it work in DC circuits?](#how-does-it-work-in-dc-circuits)\
-[4. How does it work in AC circuits?](#how-does-it-work-in-ac-circuits)
-
-## What is a Inductor?
+# What is a Inductor?
 
 **The Inductor**: An Inductor is a passive electrical component consisting of a coil of
 wire which is designed to take advantage of the relationship between magentism and
