Add Symbol Section

--- a/pages/electronics/capacitor.mdx
+++ b/pages/electronics/capacitor.mdx
@@ -1,3 +1,4 @@
+import Image from "@/components/Image";
 import { Callout } from 'nextra/components'
 
 <Callout type="info" emoji="🤖">
@@ -17,6 +18,10 @@ The capacitance of a capacitor determines its ability to store charge. It is mea
 When a voltage is applied across the capacitor, the plates accumulate opposite charges, with one plate becoming positively charged and the other negatively charged. This process is known as charging the capacitor. The rate at which the capacitor charges depends on its capacitance and the resistance in the circuit.
 
 When the voltage is removed, the capacitor starts to discharge, releasing the stored charge back into the circuit. The time it takes for the capacitor to discharge is determined by its capacitance and the resistance in the circuit.
+
+## ٍCapacitor Symbol
+<Image src="/capacitorSymbols.jpeg" caption="Capacitor Symbols" />
+The symbol for a capacitor consists of two parallel lines representing the plates and an adjacent curved line, indicating the dielectric material between them.
 
 ## Types of Capacitors
 
