--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -3,22 +3,22 @@ import { Callout } from "nextra-theme-docs";
 
 ## Welcome to Electronics Components
 
-If you're looking to refresh your knowledge of electronics basics, you've come to the right place! This website covers a wide range of electronics components to help you get back on track.
+If you're looking to refresh your knowledge of electronics basics, you've come to the right place! This website covers a wide range of electronic components to help you get back on track.
 
 ## Components:
 
-Check out the following electronics components:
+Check out the following electronic components:
 
 <Cards>
   <Card title="Resistor" href="/electronics/resistor" />
-  <Card title="Capacitor" href="/electronics/capacitor" />
+  <Card icon={"🤖"} title="Capacitor" href="/electronics/capacitor" />
   <Card title="Inductor" href="/electronics/inductor" />
   <Card title="Transformer" href="/electronics/transformer" />
-  <Card title="Switches" href="/electronics/switches" />
+  <Card icon={"🤖"} title="Switches" href="/electronics/switches" />
   <Card title="Relay" href="/electronics/relay" />
-  <Card title="Fuses" href="/electronics/fuses" />
-  <Card title="Diode (Folder)" href="/electronics/diode" />
-  <Card title="Transistor (Folder)" href="/electronics/transistor" />
+  <Card icon={"🤖"} title="Fuses" href="/electronics/fuses" />
+  <Card icon={"📁"} title="Diode (Folder)" href="/electronics/diode" />
+  <Card icon={"📁" title="Transistor (Folder)" href="/electronics/transistor" />
   <Card title="Thyristor" href="/electronics/thyristor" />
   <Card title="Diac" href="/electronics/diac" />
   <Card title="Triac" href="/electronics/triac" />
