--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -18,7 +18,7 @@ Check out the following electronic components:
   <Card title="Relay" href="/electronics/relay" />
   <Card icon={"🤖"} title="Fuses" href="/electronics/fuses" />
   <Card icon={"📁"} title="Diode (Folder)" href="/electronics/diode" />
-  <Card icon={"📁" title="Transistor (Folder)" href="/electronics/transistor" />
+  <Card icon={"📁"} title="Transistor (Folder)" href="/electronics/transistor" />
   <Card title="Thyristor" href="/electronics/thyristor" />
   <Card title="Diac" href="/electronics/diac" />
   <Card title="Triac" href="/electronics/triac" />
