--- a/pages/electronics/index.mdx
+++ b/pages/electronics/index.mdx
@@ -11,14 +11,14 @@ Check out the following electronic components:
 
 <Cards>
   <Card title="Resistor" href="/electronics/resistor" />
-  <Card icon={"🤖"} title="Capacitor" href="/electronics/capacitor" />
+  <Card icon={"🤖 "} title="Capacitor" href="/electronics/capacitor" />
   <Card title="Inductor" href="/electronics/inductor" />
   <Card title="Transformer" href="/electronics/transformer" />
-  <Card icon={"🤖"} title="Switches" href="/electronics/switches" />
+  <Card icon={"🤖 "} title="Switches" href="/electronics/switches" />
   <Card title="Relay" href="/electronics/relay" />
-  <Card icon={"🤖"} title="Fuses" href="/electronics/fuses" />
-  <Card icon={"📁"} title="Diode (Folder)" href="/electronics/diode" />
-  <Card icon={"📁"} title="Transistor (Folder)" href="/electronics/transistor" />
+  <Card icon={"🤖 "} title="Fuses" href="/electronics/fuses" />
+  <Card icon={"📁 "} title="Diode" href="/electronics/diode" />
+  <Card icon={"📁 "} title="Transistor" href="/electronics/transistor" />
   <Card title="Thyristor" href="/electronics/thyristor" />
   <Card title="Diac" href="/electronics/diac" />
   <Card title="Triac" href="/electronics/triac" />
