--- a/pages/electronics/switches.mdx
+++ b/pages/electronics/switches.mdx
@@ -1,11 +1,13 @@
 import Image from "@/components/Image";
 import {Callout} from "nextra/components";
 
+# Switches
+
 <Callout type="info" emoji="🤖">
   This article was generated with the help of Chat GPT!
 </Callout>
 
-## Switches: Introduction and Types
+## Introduction
 
 Switches are fundamental electronic components used to control the flow of current in a circuit by opening or closing the electrical pathway. They serve as the basic building blocks for various electronic and electrical systems, enabling manual or automatic control over devices.
 
