--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -1,10 +1,12 @@
 import Image from "@/components/Image";
 
-## What is a Thyristor?
+## The Thyristor
 
 A thyristor, also known as a Silicon Controlled Rectifier (SCR), is a semiconductor device.
 
-The diode allows current to flow from the Anode to the Cathode if the Anode voltage is greater than the Cathode voltage by approximately 0.7 volts. However, this behavior is different in the thyristor.
+## What is a Thyristor?
+
+Remember: The diode allows current to flow from the Anode to the Cathode if the Anode voltage is greater than the Cathode voltage by approximately 0.7 volts. However, this behavior is different in the thyristor.
 
 In the thyristor, current will only pass if a single pulse is applied to the Gate. Once triggered, the thyristor will conduct like a wire.
 
